--- a/style.css
+++ b/style.css
@@ -30,6 +30,9 @@ h3{
     margin-bottom: 10px;
 }
 .header{
+    width: 1520px;
+height: 510px;
+flex-shrink: 0;
     display: flex;
     align-items: center;
     justify-content: space-around;
@@ -74,6 +77,9 @@ input::placeholder{
 }
 
 .footer{
+    width: 1520px;
+height: 240px;
+flex-shrink: 0;
     display: flex;
     align-items: center;
     justify-content: space-around;
